# ThomasAlgorithm-HeatDiffusionProblem

./: CMakeLists.txt  README.md  setup.py
MatrixModule/include/: HeatDiffusion.hpp  Matrix.hpp  ThomasSolver.hpp  ThomasSolver.tpl.hpp
MatrixModule/src/: HeatDiffusion.cpp  Matrix.cpp  Matrix.py  Matrix_py.cpp
main/: main.py
